gobmkida/c2/liberty_of_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/liberty_of_string/src/engine/board.c:2866:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[pos] != v3 || ( result = 1, string[239].neighborlist[pos + 160] != string_number[str]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/liberty_of_string/src/engine/board.c:2868:6: error: use of undeclared identifier 'byte_9B388C'
if ( byte_9B388C[pos] != v3 || ( result = 1, string[239].neighborlist[pos + 141] != string_number[str]) ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/liberty_of_string/src/obj/1/board.o] Error 1
